# SynthWeave

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
examples/: deepfake_detection.ipynb
examples/deepfake_detection/: dataset_loading.ipynb  deepfake_detection.ipynb  utils.py
examples/multimodal_auth/: check_integrity.py  encode_dataset.py  evaluate.py  loading_data.ipynb  makefile  pipe.py  pipeline_inference.ipynb  preprocess_dataset.py  run_experiments.sh  train.py  unimodal.py  unimodal_infer.ipynb  vad_example.ipynb
examples/multimodal_auth/demo/: app.py
examples/multimodal_auth/notebooks/: demo.ipynb  loading_data.ipynb  pipeline_inference.ipynb  test.ipynb  unimodal_infer.ipynb  vad_example.ipynb
examples/multimodal_auth/scripts/: check_integrity.py  encode_dataset.py  fix_splits.py  preprocess_dataset.py  recreate_index.py  validate_splits.py
examples/multimodal_auth/src/: adv_training.py  augmentations.py  iil.py  pipe.py  temporal.py  visualization.py
fusion/: attention.py  concat.py
html/synthweave/: index.html
html/synthweave/fusion/: attention.html  base.html  classifier.html  concat.html  gating.html  index.html
html/synthweave/loss/: classification.html  embedding.html  index.html
html/synthweave/pipeline/: base.html  (+1 more)
synthweave/: __init__.py
synthweave/fusion/: __init__.py  attention.py  base.py  classifier.py  concat.py  gating.py
synthweave/loss/: __init__.py  classification.py  embedding.py
synthweave/pipeline/: base.py
synthweave/utils/: __init__.py  datasets.py  fusion.py  modules.py  tools.py  train.py
(+10 files in other folders)
