[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SynthWeave"
version = "0.0.1"
description = "A library for plug-in modality fusion for integration of multimodal feeds."

requires-python = ">= 3.10, <= 3.12"

dependencies = [
    "torch ~= 2.5.1"
]


[tool.setuptools]
packages = ["synthweave"]